<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <pl.utkala.searchablespinner.SearchableSpinner
            android:id="@+id/toCurr"
            android:layout_width="98dp"
            android:layout_height="53dp"
            android:prompt="@string/tocurrency"
            android:spinnerMode="dialog"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/enterAmt" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/toText"
            android:layout_marginStart="8dp"/>

        <pl.utkala.searchablespinner.SearchableSpinner
            android:id="@+id/fromCurr"
            android:layout_width="98dp"
            android:layout_height="53dp"
            android:prompt="@string/fromcurrency"
            android:spinnerMode="dialog"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/enterAmt" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/toText"/>

        <ImageView
            android:layout_width="287dp"
            android:layout_height="169dp" app:srcCompat="@drawable/logo"
            android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            android:contentDescription="@string/todo" app:layout_constraintHorizontal_bias="0.468"
            android:layout_marginTop="4dp"/>
        <EditText
            android:layout_width="216dp"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/enterAmt"
            android:hint="@string/enter_amount"
            android:autofillHints=""
            android:background="#7F96CA"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/convertBtn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintVertical_bias="0.726" android:textAlignment="center"/>
        <Button
            android:text="@string/convert"
            android:layout_width="219dp"
            android:layout_height="78dp"
            android:id="@+id/convertBtn" android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.493"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.944"/>
        <TextView
            android:text="@string/to"
            android:layout_width="69dp"
            android:layout_height="53dp"
            android:id="@+id/toText" android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintBottom_toTopOf="@+id/enterAmt"
            android:textAlignment="center"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/navigation_pane"/>

</androidx.drawerlayout.widget.DrawerLayout>