...
            app:layout_constraintHorizontal_bias="0.666" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.183"/>

        <TextView
            android:layout_width="398dp"
            android:layout_height="67dp"
            android:id="@+id/help_page_ans_numcurr" android:textSize="24sp"
            android:textColor="#000000" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.487" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/q_text_numcurr" android:textAlignment="viewStart"/>

        <TextView
...
            app:layout_constraintHorizontal_bias="0.665" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/help_page_ans_numcurr"/>

        <TextView
            android:layout_width="398dp"
            android:layout_height="67dp"
            android:id="@+id/help_page_ans_basecurr" android:textSize="24sp"
            android:textColor="#000000" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginBottom="36dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.665" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/q_text_basecurr" app:layout_constraintVertical_bias="0.0"
            android:textAlignment="viewStart"/>
...
